Improve performance [qbqmkv]

--- a/config.json
+++ b/config.json
@@ -2,3 +2,4 @@ Add test case for W [ppp3cF] line 1.1
 Add test case for W [ppp3cF] line 1.2
 Refactor codebase with Z [dW1vf4] line 4.3
 Refactor codebase with Z [Wydxa7] line 5.3
+Improve performance [qbqmkv] line 7.1
