--- a/config.json
+++ b/config.json
@@ -5,3 +5,4 @@ Refactor codebase with Z [Wydxa7] line 5.3
 Improve performance [qbqmkv] line 7.1
 Add test case for W [Bjiqbv] line 8.1
 Refactor codebase with Z [8gc1pZ] line 9.2
+Fix issue in Y [lrAaf9] line 10.1
